<resources>
    <string name="app_name">Filmo</string>
    <string name="base_url">https://api.themoviedb.org/</string>
    <string name="web_url">https://www.themoviedb.org/movie/</string>
    <string name="web_title">Book a Movie</string>
    <string name="api_key">c66cc26359cd6ca25d816cdc69752cd4</string>
    <string name="generic_error">Oops! Something went wrong,\nPlease try again later...</string>
    <string name="book_the_movie_button">Book the Movie</string>
    <string name="genres_header">Genres</string>
    <string name="overview_header">Overview</string>
    <string name="release_header">Release date</string>
    <string name="language_header">Language</string>
    <string name="title_release_date">Release date:</string>

    <plurals name="duration">
        <item quantity="one">%d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
</resources>
